feat: Implementacion del modulo de adquisicion de conocimiento
